packages/kit/test/apps/basics/src/routes/load/invalidation/search-params/server/+page.server.js
let count = 0;

/** @type {import("./$types").PageServerLoad} */
export function load({ url }) {
	url.searchParams.get('a');
	return {
		count: count++
	};
}
